src/objects/Assignment__c.object
<CustomObject>
    <description>An assignment represent something that needs to get done as part of a Project.</description>
    <fields>
        <fullName>Amount_Remaining__c</fullName>
        <formula>(Rate__c* Time_Allocated__c )- Amount_Worked__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Worked__c</fullName>
        <formula>Rate__c *  Time_Worked__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Worked</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approved_By_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approved By Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Assignments (Approved By Contact)</relationshipLabel>
        <relationshipName>Approved_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approved_Date__c</fullName>
        <label>Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Archived__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Archived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Remaining__c</fullName>
        <formula>IF( TODAY() &lt; Due_Date__c, Due_Date__c - TODAY(), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Time_Logged_Date__c</fullName>
        <label>Last Time Logged Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Owner_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Assignments</relationshipLabel>
        <relationshipName>Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Owner_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prerequisite_Assignment_Status__c</fullName>
        <formula>TEXT( Prerequisite_Assignment__r.Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prerequisite Assignment Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prerequisite_Assignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Prerequisite Assignment</label>
        <referenceTo>Assignment__c</referenceTo>
        <relationshipLabel>Assignments</relationshipLabel>
        <relationshipName>Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Assignments</relationshipLabel>
        <relationshipName>Assignments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_Color__c</fullName>
        <formula>IF( 
  NOT(OR(ISPICKVAL(Status__c,&quot;Client Review&quot;),ISPICKVAL(Status__c,&quot;Approved&quot;))),
  IF(
     Days_Remaining__c&lt;=0,
    IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;red&quot;, 17, 30),
    IF(
      Days_Remaining__c&lt;=4,
      IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &quot;yellow&quot;, 17, 30),
      IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;green&quot;, 17, 30)
    )
  ),
  IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;green&quot;, 17, 30)
)</formula>
        <label>Status Color</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>To Do</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Internal QA</fullName>
                </value>
                <value>
                    <fullName>Client Review</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                    <isActive>false</isActive>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Archived</fullName>
                    <isActive>false</isActive>
                    <label>Archived</label>
                </value>
                <value>
                    <fullName>Complete</fullName>
                    <isActive>false</isActive>
                    <label>Complete</label>
                </value>
                <value>
                    <fullName>Projected</fullName>
                    <isActive>false</isActive>
                    <label>Projected</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time_Allocated__c</fullName>
        <inlineHelpText>Time in Hours</inlineHelpText>
        <label>Time Allocated</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_Remaining__c</fullName>
        <formula>Time_Allocated__c - Time_Worked__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_Worked__c</fullName>
        <label>Time Worked</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Assignment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Status_Color__c</columns>
        <columns>Project__c</columns>
        <columns>NAME</columns>
        <columns>Amount_Worked__c</columns>
        <columns>Amount_Remaining__c</columns>
        <columns>Owner_User__c</columns>
        <columns>Prerequisite_Assignment__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Open_Assignments</fullName>
        <columns>Status_Color__c</columns>
        <columns>Status__c</columns>
        <columns>NAME</columns>
        <columns>Due_Date__c</columns>
        <columns>Prerequisite_Assignment__c</columns>
        <columns>Project__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Owner_User__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>To Do,In Progress,Internal QA,Client Review</value>
        </filters>
        <label>All Open Assignments</label>
    </listViews>
    <nameField>
        <label>Assignment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>